# perfsim

./: .gitignore  README.md  pyproject.toml
condor/: SETUP.md  at_calibration.sub  at_covid_calibrated.sub  at_covid_lm.sub  at_covid_lm_baseline.sub  at_covid_nomodel.sub  at_covid_omicron.sub  at_macro_calibration.sub  at_macro_lm.sub  at_macro_lm_baseline.sub  configs_alpha_sweep.txt  configs_baseline.txt  configs_betas.txt  configs_calibrated_sweep.txt  configs_calibration.txt  configs_macro_calibration.txt  configs_nomodel_baselines.txt  configs_omicron_sweep.txt  run_calibration.sh  run_calibration_macro.sh  run_nomodel.sh  run_one.sh  run_one_macro.sh
examples/: at_covid_calibrate.py  at_covid_grad_smoke.py  at_covid_joint.py  at_covid_perf_opt.py  at_covid_policy_sensitivity.py  at_covid_smoke.py  gaussian_shift_rrm.ipynb  gaussian_shift_rrm.py  gaussian_shift_rrm_vs_rgd.py  nonlinear_strategic.py  perdomo_mu_sweep.py  perdomo_strategic_a2a.py  perdomo_strategic_inproc.py  pokec_fj_llm_example.ipynb  pokec_fj_llm_example.py  pokec_fj_smoke_tests.ipynb  pokec_fj_smoke_tests.py
experiments/condor/: SETUP.md  at_calibration.sub  at_covid_calibrated.sub  at_covid_lm.sub  at_covid_lm_baseline.sub  at_covid_nomodel.sub  at_covid_omicron.sub  at_macro_calibration.sub  at_macro_in_context.sub  at_macro_lm.sub  at_pokec_fj_betas.sub  at_pokec_fj_schedules.sub  at_pokec_fj_smoke.sub  at_schelling_lm.sub  configs_betas.txt  configs_macro_betas.txt  configs_macro_calibration.txt  configs_macro_in_context.txt  configs_pokec_fj_betas.txt  configs_pokec_fj_schedules.txt  configs_pokec_fj_smoke.txt  configs_schelling_betas.txt  run_calibration.sh  run_calibration_macro.sh  run_nomodel.sh  run_one.sh  run_one_in_context.sh  run_one_macro.sh  run_one_pokec_fj.sh  run_one_schelling.sh
experiments/scripts/: _collapse_metrics.py  calibrate_covid.py  calibrate_covid_local.py  calibrate_covid_single.py  calibrate_macro.py  calibrate_macro_single.py  calibrate_schelling.py  covid_abm_sweep.py  fj_baselines_local.py  fj_beta_dissociation.py  fj_mlp_homogenize.py  fj_schedules_local.py  grad_diagnostics.py  macro_abm_sweep.py  mlp_beta_sweep.py  pick_best_calibration.py  run_covid_lm.py  run_covid_nomodel.py  run_covid_perfgd.py  run_covid_sensitivity.py  run_macro_in_context.py  run_macro_lm.py  run_pokec_fj_lm.py  run_schelling_lm.py
perfsim/: __init__.py  history.py  losses.py  metrics.py  simulator.py
perfsim/adapters/: README.md  __init__.py  agenttorch.py  mastodon_sim_hook.py
perfsim/agents/: __init__.py  coordinator.py  population.py  predictor.py
perfsim/core/: __init__.py  agent_spec.py  dataset.py  environment.py  executor.py  learner.py  loss.py  messages.py  model.py  predictor.py  types.py  world.py
perfsim/datasets/: __init__.py  hf.py  kaggle.py  tabular.py  tensor.py
perfsim/environments/: __init__.py
perfsim/learners/: __init__.py  derivative_aware.py  erm.py  gradient.py  perfgd.py  proximal.py
perfsim/models/: __init__.py  hf_causal_lm.py  linear.py  mlp.py
perfsim/scenarios/: __init__.py
perfsim/worlds/: README.md  __init__.py  _common.py  fj.py  replicator.py  (+5 more)
scripts/: calibrate_covid.py  calibrate_covid_local.py  calibrate_covid_single.py  calibrate_macro.py  calibrate_macro_single.py  grad_diagnostics.py  pick_best_calibration.py  run_covid_lm.py  run_covid_nomodel.py  run_covid_sensitivity.py  run_macro_lm.py
tests/: test_agent_spec.py  test_agents.py  test_agenttorch_adapter.py  test_at_covid.py  test_at_covid_grad.py  test_card_roundtrip.py  test_convergence.py  test_core.py  test_dataset_hash.py  test_decoupled_risk_identity.py  test_dispatch_parity.py  test_epoch_loop.py  test_executor.py  test_fj_world.py  test_hf_causal_lm.py  test_history.py  test_kaggle_dataset.py  test_learner.py  test_loss.py  test_messages.py  test_metrics.py  test_mlp.py  test_model.py  test_perdomo_scenario.py  test_predictor_facade.py  test_replicator_world.py  test_schema_binding.py  test_sft_learner.py  test_simulator.py  test_stateful_population.py  test_strategic_gradient_world.py  test_tabular_dataset.py  test_world.py
(+71 files in other folders)
