[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "perfsim"
version = "0.0.0"
description = "General high-performance simulator for performative prediction, A2A protocol native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabe Smithline" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
tabular = ["pandas>=2.2", "pyarrow>=15.0"]
kaggle = ["kaggle>=1.6", "pandas>=2.2", "pyarrow>=15.0"]
a2a = ["a2a-sdk>=0.1"]
hf = ["datasets>=2.18", "transformers>=4.40"]
trl = ["trl>=0.9", "transformers>=4.40", "accelerate>=0.30"]
vllm = ["vllm>=0.5"]
agenttorch = ["agent-torch>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "perfsim[tabular,kaggle,a2a,hf,trl,vllm,agenttorch,dev]",
]

[project.urls]
Homepage = "https://github.com/gsmithline/perfsim"

[tool.hatch.build.targets.wheel]
packages = ["perfsim"]

[tool.hatch.build.targets.sdist]
include = ["perfsim", "tests", "examples", "DESIGN.md", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
